--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-	"deploy": "npx hardhat run scripts/deploy.ts --network optimismGoerli"
+	"deploy": "npx hardhat run scripts/deploy.ts --network optimismDev",
+	"abi": "npx hardhat run scripts/get-abi.ts"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
