--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
 	"deploy": "npx hardhat run scripts/deploy.ts --network optimismDev",
-	"abi": "npx hardhat run scripts/get-abi.ts"
+	"abi": "npx hardhat run scripts/extract-abi.ts"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
