--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-	"deploy": "npx hardhat run scripts/deploy.ts --network optimismDev",
-	"abi": "npx hardhat run scripts/extract-abi.ts",
-	"test": "npx hardhat test"
+    "deploy": "npx hardhat run scripts/deploy.ts --network mumbai",
+    "deploy:optimism": "npx hardhat run scripts/deploy.ts --network optimismGoerli",
+    "abi": "npx hardhat run scripts/extract-abi.ts",
+    "test": "npx hardhat test"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -30,5 +31,8 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0"
+  },
+  "dependencies": {
+    "@chainlink/contracts": "^0.5.1"
   }
 }
