--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "deploy": "npx hardhat run scripts/deploy.ts --network mumbai",
     "deploy:optimism": "npx hardhat run scripts/deploy.ts --network optimismGoerli",
     "abi": "npx hardhat run scripts/extract-abi.ts",
-    "test": "npx hardhat test"
+    "test": "hardhat test test/local/*.ts",
+    "test-staging": "hardhat test test/staging/*.ts --network mumbai"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
