--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy:matic": "npx hardhat run scripts/deploy.ts --network matic",
     "abi": "npx hardhat run scripts/extract-abi.ts",
     "test": "hardhat test test/local/*.ts",
-    "test-staging": "hardhat test test/staging/*.ts --network fantom"
+    "test-staging": "hardhat test test/staging/*.ts --network fantom",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -23,11 +24,17 @@
     "@types/chai": "^4.2.0",
     "@types/mocha": "^9.1.0",
     "@types/node": ">=12.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "chai": "^4.2.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.12.4",
     "hardhat-gas-reporter": "^1.0.8",
+    "husky": "^8.0.2",
+    "prettier": "^2.8.1",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
