--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "abi": "npx hardhat run scripts/extract-abi.ts",
     "test": "hardhat test test/local/*.ts",
     "test-staging": "hardhat test test/staging/*.ts --network fantom",
-    "prepare": "husky install"
+    "configure-husky": "npx husky install && npx husky add .husky/pre-commit \"npx --no-install lint-staged\""
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -34,6 +34,7 @@
     "hardhat": "^2.12.4",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
@@ -42,5 +43,16 @@
   },
   "dependencies": {
     "@chainlink/contracts": "^0.5.1"
+  },
+  "lint-staged": {
+    "**/*.{css,js,jsx,ts,tsx,json}": [
+      "eslint . --fix",
+      "prettier --write ."
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
