--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.12.4",
     "hardhat-gas-reporter": "^1.0.8",
